--- a/index.html
+++ b/index.html
@@ -128,178 +128,227 @@
 </section>
 
     <!--==================== ABOUT ====================-->
-<section class="about section" id="about">
-  <h2 class="section__title"> About Me</h2>
-  <span class="section__subtitle">My introduction</span>
+    <section class="about section" id="about">
+      <h2 class="section__title">About Me</h2>
+      <span class="section__subtitle">My introduction</span>
 
-  <div class="about__container container grid">
-    <img src="assets/img/about.jpg" alt="" class="about__img">
+      <div class="about__container container grid">
+          <img src="assets/img/about.jpg" alt="" class="about__img">
 
-    <div class="about__data">
-      <p class="about__description">
-        I am a Junior Developer career pivoting from the travel industry, with experience working with Rails. My previous career
-        as a team leader and entrepreneur allowed me to be collaborative and creative, which is something I now enjoy bringing
-        to my code. I am empathetic, approachable and an active listener; traits that allow me to create great projects and
-        build relationships along the way.
-      </p>
+          <div class="about__data">
+              <p class="about__description">I am a Junior Developer career pivoting from the travel industry, with experience working with Rails. My previous career
+                  as a team leader and entrepreneur allowed me to be collaborative and creative, which is something I now enjoy bringing
+                  to my code. I am empathetic, approachable and an active listener; traits that allow me to create great projects and
+                  build relationships along the way.
+              </p>
 
-      </div> 
-      <div class="about__buttons">
-        <a download="" href="assets/PDF/pauline_rouger_resume.pdf" target="_blank" class="button button--flex">
-          Download CV <i class="uil uil-download-alt button__icon"></i>
-        </a>
+              <div class="about__buttons">
+                  <!--==================== Change your CV ====================-->
+                  <a download="" href="assets/PDF/pauline_rouger_resume.pdf" target="_blank" class="button button--flex">
+                      Download CV <i class="uil uil-download-alt button__icon"></i>
+                  </a>
+              </div>
+          </div>
       </div>
-    </div>
-  </div>
+  </section>
 
-</section>
-
-    <!--==================== SKILLS ====================-->
-<section class="skills section" id="skills">
+  <!--==================== SKILLS ====================-->
   <section class="skills section" id="skills">
     <h2 class="section__title">Skills</h2>
     <span class="section__subtitle">My technical level</span>
 
     <div class="skills__container container grid">
-      <div>
-        <!--====================== SKILLS 1 =============================-->
-        <div class="skills__content skills__open">
-          <div class="skills__header">
-            <i class="uil uil-brackets-curly skills__icon"></i>
+        <div>
+            <!--=============== SKILLS 1 ===============-->
+            <div class="skills__content skills__open">
+                <div class="skills__header">
+                    <i class="uil uil-brackets-curly skills__icon"></i>
 
-            <div>
-              <h1 class="skills__title">Backend Development</h1>
-              <!-- <span class="skills__subtitle">More than 2 years</span> -->
+                    <div>
+                        <h1 class="skills__title">Frontend developer</h1>
+                    </div>
+
+                    <i class="uil uil-angle-down skills__arrow"></i>
+                </div>
+
+                <div class="skills__list grid">
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">HTML3</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__html"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">CSS3</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__css"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">JavaScript ES6</h3>
+
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__js"></span>
+                        </div>
+                    </div>
+
+                </div>
             </div>
 
-            <i class="uil uil-angle-down skills__arrow"></i>
-          </div>
+            <!--=============== SKILLS 2 ===============-->
+            <div class="skills__content skills__close">
+                <div class="skills__header">
+                    <i class="uil uil-server-network skills__icon"></i>
 
-          <div class="skills__list grid">
-            <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">Ruby on Rails</h3>
-                <div class="skills__number">80%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__rails"></div>
-              </div>
+                    <div>
+                        <h1 class="skills__title">Backend developer</h1>
+                    </div>
+
+                    <i class="uil uil-angle-down skills__arrow"></i>
+                </div>
+
+                <div class="skills__list grid">
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Ruby on Rails</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__rails"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Node Js</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__node"></span>
+                        </div>
+                    </div>
+
+                </div>
             </div>
-
-            <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">Elixir</h3>
-                <div class="skills__number">80%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__elixir"></div>
-              </div>
-            </div>
-
-            <!-- <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">Django</h3>
-                <div class="skills__number">60%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__django"></div>
-              </div>
-            </div> -->
-          </div>
-        </div>
-
-        <!--====================== SKILLS 2 =============================-->
-        <div class="skills__content skills__close">
-          <div class="skills__header">
-            <i class="uil uil-brackets-curly skills__icon"></i>
-
-            <div>
-              <h1 class="skills__title">Frontend Development</h1>
-              <!-- <span class="skills__subtitle">More than 1 year</span> -->
-            </div>
-
-            <i class="uil uil-angle-down skills__arrow"></i>
-          </div>
-
-          <div class="skills__list grid">
-            <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">HTML5</h3>
-                <div class="skills__number">70%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__html"></div>
-              </div>
-            </div>
-
-            <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">CSS3</h3>
-                <div class="skills__number">60%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__css"></div>
-              </div>
-            </div>
-
-            <div class="skills__data">
-              <div class="skills__titles">
-                <h3 class="skills__name">Javascript</h3>
-                <div class="skills__number">80%</div>
-              </div>
-              <div class="skills__bar">
-                <div class="skills__percentage skills__javascript"></div>
-              </div>
-            </div>
-
-          </div>
         </div>
 
         <div>
-          <!--====================== SKILLS 3 =============================-->
-          <div class="skills__content skills__close">
-            <div class="skills__header">
-              <i class="uil uil-brackets-curly skills__icon"></i>
+            <!--=============== SKILLS 3 ===============-->
+            <div class="skills__content skills__close">
+                <div class="skills__header">
+                    <i class="uil uil-swatchbook skills__icon"></i>
 
-              <div>
-                <h1 class="skills__title">Database Design</h1>
-                <!-- <span class="skills__subtitle">More than 2 years</span> -->
-              </div>
+                    <div>
+                        <h1 class="skills__title">Tools</h1>
+                    </div>
 
-              <i class="uil uil-angle-down skills__arrow"></i>
+                    <i class="uil uil-angle-down skills__arrow"></i>
+                </div>
+
+                <div class="skills__list grid">
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Bootstrap</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__bootstrap"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">GitHub</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__git"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Figma</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__figma"></span>
+                        </div>
+                    </div>
+                </div>
             </div>
 
-            <div class="skills__list grid">
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">MySQL</h3>
-                  <div class="skills__number">80%</div>
+            <!--=============== SKILLS 4 ===============-->
+            <div class="skills__content skills__open">
+                <div class="skills__header">
+                    <i class="uil uil-heart-rate skills__icon"></i>
+
+                    <div>
+                        <h1 class="skills__title">Soft Skills</h1>
+                    </div>
+
+                    <i class="uil uil-angle-down skills__arrow"></i>
                 </div>
-                <div class="skills__bar">
-                  <div class="skills__percentage skills__mysql"></div>
+
+                <div class="skills__list grid">
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Adaptability</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__adaptability"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Teamwork</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__teamwork"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Creativity</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__creativity"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                        <div class="skills__titles">
+                            <h3 class="skills__name">Interpersonal</h3>
+                        </div>
+                        <div class="skills__bar">
+                            <span class="skills__percentage skills__interpersonal"></span>
+                        </div>
+                    </div>
+
+                    <div class="skills__data">
+                      <div class="skills__titles">
+                          <h3 class="skills__name">Problem-Solving</h3>
+                      </div>
+                      <div class="skills__bar">
+                          <span class="skills__percentage skills__interpersonal"></span>
+                      </div>
+                  </div>
+
+
                 </div>
-              </div>
-              <div class="skills__data">
-                <div class="skills__titles">
-                  <h3 class="skills__name">Graphql</h3>
-                  <div class="skills__number">70%</div>
-                </div>
-                <div class="skills__bar">
-                  <div class="skills__percentage skills__graphql"></div>
-                </div>
-              </div>
             </div>
-          </div>
+                
         </div>
-      </div>
     </div>
-  </section>
-
 </section>
-
     <!--==================== QUALIFICATION ====================-->
 <section class="qualification section">
-    <h2 class="section__title">Qualifications</h2>
+    <h2 class="section__title">Background</h2>
     <div class="section__subtitle">My personal journey</div>
 
     <div class="qualification__container container">
@@ -379,7 +428,7 @@
                     <div>
                         <h3 class="qualification__title">Full-Stack Developer</h3>
                         <span class="qualification__subtitle">
-                            <a href="https://www.cogini.com/" target="_blank">Cogini</a>
+                            <a href="https://www.cogini.com/" target="_blank">Cogini</a> - Taiwan
                         </span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -404,7 +453,7 @@
                     <div>
                         <h3 class="qualification__title">Entrepreneur & Travel Planner</h3>
                         <span class="qualification__subtitle">
-                            <a href="https://timetotravel.online/" target="_blank">Time To Travel</a>
+                            <a href="https://timetotravel.online/" target="_blank">Time To Travel</a> - Singapore
                         </span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -418,7 +467,7 @@
                     <div>
                         <h3 class="qualification__title">Team Leader & Senior consultant</h3>
                         <span class="qualification__subtitle">
-                            <a href="https://www.helloworldlimited.com.au/" target="_blank">Helloworld Travel Limited</a>
+                            <a href="https://www.helloworldlimited.com.au/" target="_blank">Helloworld Travel Limited</a> - Melbourne
                         </span>
                         <div class="qualification__calendar">
                             <i class="uil uil-calendar-alt"></i>
@@ -599,7 +648,7 @@
 
         <!--=============== PORTFOLIO 3 ===============-->
         <div class="portfolio__content grid swiper-slide">
-          <img src="assets/img/portfolio3.jpg" alt="" class="portfolio__img">
+          <img src="assets/img/portfolio3.png" alt="" class="portfolio__img">
 
           <div class="portfolio__data">
               <h3 class="portfolio__title">Taiwan Camps</h3>
@@ -645,8 +694,8 @@
 
 
     <!--==================== TESTIMONIAL ====================-->
-    <section class="testimonial section">
-      <h2 class="section__title">Testimonial</h2>
+    <section class="testimonial section" id="testimonial">
+      <h2 class="section__title">Testimonials</h2>
       <span class="section__subtitle">What people say about me</span>
 
       <div class="testimonial__container container swiper-container">
@@ -760,7 +809,11 @@
                       </div>
                   </div>
 
-                  <form action="" class="contact__form grid">
+                  <form action="mailto:paulinerouge@hotmail.com" 
+                  method="POST"
+                  enctype="multipart/form-data"
+                  name="EmailForm" 
+                  class="contact__form grid">
                       <div class="contact__inputs grid">
                           <div class="contact__content">
                               <label for="" class="contact__label">Name</label>
@@ -783,6 +836,7 @@
                       <div>
                           <a href="#" class="button button--flex">
                               Send Message
+                              <!-- <input type=”submit” value=”Submit”>  -->
                               <i class="uil uil-message button__icon"></i>
                           </a>
                       </div>
